--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
-
 <html>
   <head>
-    <title> Leah's 441 site </title>
+    <meta charset="utf-8">
+    <title>Leah Becker's 441 site</title>
+    <meta name="author" content="Leah Becker">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="./Homework_1/style.css">
   </head>
 
   <body>
-    <h1> Leah's 441 Homework site </h1>
-    <p> This is the main homepage for Leah Becker's 441 homework site! </p> 
+
+    <div class="hero-image">
+      <div class="hero-text">
+        <h1>Leah Becker</h1>
+      </div>
+    </div>
+
+    <section>
+      <div class="about">
+        <hr>
+        <h2> About Me </h2>
+        <hr>
+        <p> Hi! I'm Leah Becker. I'm originally from Bozeman, Montanta and am
+        currently Majoring in Media Arts at U of M. I expect to graduate in Spring
+        of 2020. Hopefully that is not too lofty a goal! </p>
+        <hr>
+      </div>
+    </section>
+
+    <section>
+      <div class="interests">
+        <hr>
+        <h2> Interests </h2>
+        <hr>
+        <p> I love to draw. I spend a lot of time sketching or painting. Recently
+          I've started reading comics. I enjoy movies. I wouldn't know what else
+          to say about my self. </p>
+        <hr>
+      </div>
+    </section>
+
+
   </body>
+
 </html>
