--- a/HW-7/index.html
+++ b/HW-7/index.html
@@ -1,15 +1,16 @@
 <html>
   <head>
-    <title>
-        View Master
-    </title>
-    <script src="scripts/main.js"></script>
+    <script src= "scripts/main.js" ></script>
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     </link>
   </head>
 
   <body onload= "buildArray();">
     <div id= "title"></div>
+    <img id="image" src = "this.image">
+    <div id= "author"></div>
+    <div id= "Year"></div>
+    <div id= "description"></div>
     <button id="btnSubmit" onclick="randomImage();">Advance</button>
   </body>
 </html>
