--- a/index.html
+++ b/index.html
@@ -1,47 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>Leah Becker's 441 site</title>
-    <meta name="author" content="Leah Becker">
+    <title>Test Page for jQuery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./Homework_1/style.css">
-  </head>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
 
-  <body>
+<body>
 
-    <div class="hero-image">
-      <div class="hero-text">
-        <h1>Leah Becker</h1>
-      </div>
+    <!-- Put your HTML First -->
+    <div class="container">
+
     </div>
 
-    <section>
-      <div class="about">
-        <hr>
-        <h2> About Me </h2>
-        <hr>
-        <p> Hi! I'm Leah Becker. I'm originally from Bozeman, Montanta and am
-        currently Majoring in Media Arts at U of M. I expect to graduate in Spring
-        of 2020. Hopefully that is not too lofty a goal! </p>
-        <hr>
-      </div>
-    </section>
+    <!-- Then add your JS -->
+    <!-- First, jquery. -->
+    <script
+        src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous"></script>
+    <!-- Then, your scripts -->
+    <script src="./js/script.js"></script>
 
-    <section>
-      <div class="interests">
-        <hr>
-        <h2> Interests </h2>
-        <hr>
-        <p> I love to draw. I spend a lot of time sketching or painting. Recently
-          I've started reading comics. I enjoy movies. I wouldn't know what else
-          to say about my self. </p>
-        <hr>
-      </div>
-    </section>
-
-
-  </body>
-
+</body>
 </html>
