--- a/HW-8/index.html
+++ b/HW-8/index.html
@@ -1,16 +1,18 @@
 <html>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./scripts/main.js"></script>
-    <link href="styles/style.css" type="text/css" rel="stylesheet">
+    <link href="styles/main.css" type="text/css" rel="stylesheet">
+
     <body onload="initializeArray();">
-        <!--<div id="square"></div>-->
+
+        <div id="square"></div>
         <br>
-        <button id="move">Move Square</button>
+        <button id="move"> Progress Image</button>
         <br>
-        <img src="" id="dog">
-        <p class="stuff">First Paragraph</p>
-        <p class="stuff">Second Paragraph</p>
-        <p id="third">Third Paragraph</p>
+        <img src="" id="silhouette">
+        <p class="stuff">Admittedly, I'm a work in progress.</p>
+        <p class="stuff">something</p>
+        <p id="third">I like silhouette photography :D</p>
 
         <div class="stuff">This is a whole bunch of stuff in the div</div>
     </body>
