--- a/HW-8/index.html
+++ b/HW-8/index.html
@@ -1,7 +1,7 @@
 <html>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./scripts/main.js"></script>
-    <link href="styles/main.css" type="text/css" rel="stylesheet">
+    <link href="/styles/main.css" type="text/css" rel="stylesheet">
 
     <body onload="initializeArray();">
 
