--- a/HW-11-pt2/index.html
+++ b/HW-11-pt2/index.html
@@ -4,6 +4,7 @@
     </head>
     <script src= "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="scripts/square.js"></script>
+    <script src="scripts/collectables.js"></script>
     <script src="scripts/canvas.js"></script>
     <style>
         #myCanvas{
