--- a/HW-11-pt2/index.html
+++ b/HW-11-pt2/index.html
@@ -4,7 +4,7 @@
     </head>
     <script src="libs/jquery.min.js"></script>
     <script src="scripts/square.js"></script>
-    <script src="scripts/collectables.js"></script>
+    <script src="scripts/collectable.js"></script>
     <script src="scripts/canvas.js"></script>
     <style>
         #myCanvas{
